DAO and Services implemented

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,9 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.JPALab1-Model.jar}:\
+    ${reference.JPALab1-DAO.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -69,6 +71,10 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.JPALab1-DAO=../JPLAB/JPALab1-DAO
+project.JPALab1-Model=../JPLAB/JPALab1-Model
+reference.JPALab1-DAO.jar=${project.JPALab1-DAO}/dist/JPALab1-DAO.jar
+reference.JPALab1-Model.jar=${project.JPALab1-Model}/dist/JPALab1-Model.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
